src/objects/OAuthToken__mdt.object
<CustomObject>
    <fields>
        <fullName>Realm__c</fullName>
        <label>Realm</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>QuickBooks OAuth Setting</label>
        <referenceTo>QuickBooks_OAuth_Setting__mdt</referenceTo>
        <relationshipLabel>OAuth Tokens</relationshipLabel>
        <relationshipName>OAuthTokens</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>TokenSecret__c</fullName>
        <label>Token Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>OAuth Token</label>
    <pluralLabel>OAuth Tokens</pluralLabel>
</CustomObject>